<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/page_title1"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="Register"
        android:layout_margin="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_title1"
        android:layout_marginTop="10dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        android:labelFor="@+id/user_name"
        android:padding="17dp"
        android:text="@string/name_user"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/connect_page_text_2_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/mdp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/yellow"
        android:onClick="Register"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#0D47A1"
        android:textSize="15sp"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="10dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:labelFor="@+id/user_name"
        android:padding="17dp"
        android:text="@string/mdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/connect_page_text_2_3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-23dp"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/google"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/twitter"
            android:src="@drawable/twitter" />


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/facebook"
            android:src="@drawable/facebook" />


    </LinearLayout>


</RelativeLayout>