<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="10dp">

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign"
        android:layout_marginTop="10dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        android:labelFor="@+id/user_name"
        android:padding="17dp"
        android:text="@string/name_user"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="10dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="8dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_call_24"
        android:drawablePadding="20dp"
        android:inputType="number"
        android:padding="17dp"
        android:text="@string/Phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginTop="10dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:padding="17dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"

        />
    <EditText
        android:id="@+id/repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginTop="10dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:padding="17dp"
        android:text="@string/repass"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />
    //android:onClick="homeActivity"

    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/google"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/bio"
            android:src="@drawable/twitter" />


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/facebook"
            android:src="@drawable/facebook" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="41dp"
        tools:visibility="invisible" />


</RelativeLayout>